# langgraph-store-vertex-memorybank

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  publish.yml
sample/: chatbot.py  chatbot_direct.py  chatbot_langmem.py
src/langgraph_store_vertex_memorybank/: __init__.py  nodes.py  store.py
src/langgraph_vertex_memorybank/: __init__.py  nodes.py  store.py
tests/: test_integration.py  test_nodes.py  test_store.py
