[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-store-vertex-memorybank"
version = "0.1.0"
description = "LangGraph BaseStore implementation backed by Vertex AI Agent Engine Memory Bank"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Alan Blount", email = "alan@zeroasterisk.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langgraph-checkpoint>=2.0.0",
    "google-cloud-aiplatform>=1.80.0",
    "google-auth>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.10",
]
sample = [
    "langgraph>=0.3.0",
    "langchain-google-genai>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/zeroasterisk/langgraph-store-vertex-memorybank"
Repository = "https://github.com/zeroasterisk/langgraph-store-vertex-memorybank"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_store_vertex_memorybank"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that hit real APIs (deselect with '-m \"not integration\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
