[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-store-vertex-memorybank"
version = "0.3.0"
description = "LangGraph BaseStore backed by Vertex AI Agent Engine Memory Bank — fully managed, LLM-powered long-term memory."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Alan Blount", email = "alan@zeroasterisk.com" },
]
keywords = [
    "langgraph",
    "vertex-ai",
    "memory-bank",
    "long-term-memory",
    "agent-memory",
    "llm",
    "google-cloud",
    "langmem",
    "basestore",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "google-cloud-aiplatform>=1.111.0",
    "langgraph>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.10",
]
sample = [
    "langchain-google-genai>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/zeroasterisk/langgraph-store-vertex-memorybank"
Repository = "https://github.com/zeroasterisk/langgraph-store-vertex-memorybank"
Documentation = "https://cloud.google.com/vertex-ai/generative-ai/docs/agent-engine/memory-bank/overview"
Issues = "https://github.com/zeroasterisk/langgraph-store-vertex-memorybank/issues"
Changelog = "https://github.com/zeroasterisk/langgraph-store-vertex-memorybank/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_store_vertex_memorybank"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that hit real APIs (deselect with '-m \"not integration\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
